--- a/MrazMagHomework/MrazMagHomework.vcxproj.filters
+++ b/MrazMagHomework/MrazMagHomework.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="PQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="interface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
